--- a/nlp/05_text_classification/practice.ipynb
+++ b/nlp/05_text_classification/practice.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,22 +23,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch\n",
-    "# 데이터프레임 생성\n",
-    "ratings_train_df = pd.read_csv(ratings_train_path, sep='\\t')\n",
-    "ratings_test_df = pd.read_csv(ratings_test_path, sep='\\t')\n",
+    "# 결측치 제거\n",
+    "ratings_train_df = ratings_train_df.dropna(how=\"any\")\n",
+    "ratings_test_df = ratings_test_df.dropna(how=\"any\")\n",
     "\n",
-    "ratings_train_df = ratings_train_df[:10000]\n",
-    "ratings_test_df = ratings_test_df[:10000]"
+    "display(ratings_train_df.info())\n",
+    "display(ratings_test_df.info())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 결측치 제거\n",
+    "ratings_train_df = ratings_train_df.dropna(how=\"any\")\n",
+    "ratings_test_df = ratings_test_df.dropna(how=\"any\")\n",
+    "\n",
+    "display(ratings_train_df.info())\n",
+    "display(ratings_test_df.info())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -79,6 +92,27 @@
     "    tokens = okt.morphs(sentence, stem=True)\n",
     "    tokens = [token for token in tokens if token not in stop_words]\n",
     "    ratings_train.append(tokens)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train[:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers import AutoModel, AutoTokenizer\n",
+    "\n",
+    "model = AutoModel.from_pretrained('klue/bert-base')\n",
+    "tokenizer = AutoTokenizer.from_pretrained('klue/bert-base')"
    ]
   },
   {
