--- a/LLM/08_multi-modal/02_style_transfer/03_mediapipe.ipynb
+++ b/LLM/08_multi-modal/02_style_transfer/03_mediapipe.ipynb
@@ -382,7 +382,19 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m현재 셀 또는 이전 셀에서 코드를 실행하는 동안 Kernel이 충돌했습니다. \n",
+      "\u001b[1;31m셀의 코드를 검토하여 가능한 오류 원인을 식별하세요. \n",
+      "\u001b[1;31m자세한 내용을 보려면 <a href='https://aka.ms/vscodeJupyterKernelCrash'>여기</a>를 클릭하세요. \n",
+      "\u001b[1;31m자세한 내용은 Jupyter <a href='command:jupyter.viewOutput'>로그</a>를 참조하세요."
+     ]
+    }
+   ],
    "source": [
     "cap = cv2.VideoCapture(0)\n",
     "\n",
@@ -400,6 +412,27 @@
     "            for c, lm in enumerate(face_landmark.landmark):\n",
     "                xy_point.append([lm.x, lm.y])\n",
     "                img = cv2.circle(img, (int(lm.x * img_w), int(lm.y * img_h)), 1, (255,0,0), 2)\n",
+    "            \n",
+    "            top_left = np.min(xy_point, axis=0)\n",
+    "            bottom_right = np.max(xy_point, axis=0)\n",
+    "            mean_xy = np.mean(xy_point, axis=0)\n",
+    "            img = cv2.circle(img, (int(mean_xy[0] * img_w), int(mean_xy[1] * img_h)), 4, (255,0,0), 3)\n",
+    "            face_width = int(bottom_right[0] * img_w) - int(top_left[0] * img_w)\n",
+    "            face_height = int(bottom_right[1] * img_h) - int(top_left[1] * img_h)\n",
+    "            \n",
+    "            if face_width > 0 and face_height > 0:\n",
+    "                face_result = face_overlay(\n",
+    "                    img, \n",
+    "                    mask_img, \n",
+    "                    int(mean_xy[0] * img_w), \n",
+    "                    int(mean_xy[1] * img_h), \n",
+    "                    overlay_size=(face_width, face_height)\n",
+    "                )\n",
+    "\n",
+    "    else:\n",
+    "        face_result = img\n",
+    "\n",
+    "    cv2.imshow('mini mouse', face_result)\n",
     "\n",
     "    if cv2.waitKey(1) == ord('q'):\n",
     "        break\n",
