--- a/LLM/08_multi-modal/02_style_transfer/04_mediapipe_hands.ipynb
+++ b/LLM/08_multi-modal/02_style_transfer/04_mediapipe_hands.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,106 @@
     "cap.release()\n",
     "cv2.destroyAllWindows()\n",
     "cv2.waitKey(1)\n",
-    "# cv2.destroyWindow('Hand Tracking')\n"
+    "# cv2.destroyWindow('Hand Tracking')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cap = cv2.VideoCapture(0)\n",
+    "\n",
+    "while cap.isOpened():\n",
+    "    ret, frame = cap.read()\n",
+    "    \n",
+    "    frame = cv2.flip(frame, 1)\n",
+    "    img_rgb = cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)\n",
+    "    \n",
+    "    results = hands.process(img_rgb)\n",
+    "    \n",
+    "    if results.multi_hand_landmarks:\n",
+    "        for hand_landmarks, hand_lr in zip(results.multi_hand_landmarks, results.multi_handedness):\n",
+    "            label = hand_lr.classification[0].label\n",
+    "            \n",
+    "            img_h, img_w, _ = frame.shape\n",
+    "            \n",
+    "            mp_drawing.draw_landmarks(frame, hand_landmarks, mp_hands.HAND_CONNECTIONS)\n",
+    "            \n",
+    "            if label == 'Left':\n",
+    "                cv2.putText(frame, 'Left', (20, 40), cv2.FONT_HERSHEY_SIMPLEX, 1, (0, 0, 255), 2)\n",
+    "            else:\n",
+    "                cv2.putText(frame, 'Right', (20, 40), cv2.FONT_HERSHEY_SIMPLEX, 1, (0, 0, 255), 2)\n",
+    "                \n",
+    "    cv2.imshow('Hand Tracking', frame)\n",
+    "    \n",
+    "    if cv2.waitKey(1) & 0xFF == 27:\n",
+    "        break\n",
+    "cap.release()\n",
+    "cv2.destroyAllWindows()\n",
+    "cv2.waitKey(1)\n",
+    "# cv2.destroyWindow('Hand Tracking')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "cap = cv2.VideoCapture(0)\n",
+    "\n",
+    "while cap.isOpened():\n",
+    "    ret, frame = cap.read()\n",
+    "    \n",
+    "    frame = cv2.flip(frame, 1)\n",
+    "    img_rgb = cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)\n",
+    "    \n",
+    "    results = hands.process(img_rgb)\n",
+    "    \n",
+    "    if results.multi_hand_landmarks:\n",
+    "        for hand_landmarks, hand_lr in zip(results.multi_hand_landmarks, results.multi_handedness):\n",
+    "            \n",
+    "            # 손목 좌표\n",
+    "            wrist = hand_landmarks.landmark[mp_hands.HandLandmark.WRIST]\n",
+    "            \n",
+    "            label = hand_lr.classification[0].label\n",
+    "            \n",
+    "            img_h, img_w, _ = frame.shape\n",
+    "            \n",
+    "            mp_drawing.draw_landmarks(frame, hand_landmarks, mp_hands.HAND_CONNECTIONS)\n",
+    "            \n",
+    "            if label == 'Left':\n",
+    "                cv2.putText(frame, 'Left', (20, 40), cv2.FONT_HERSHEY_SIMPLEX, 1, (0, 0, 255), 2)\n",
+    "            else:\n",
+    "                cv2.putText(frame, 'Right', (20, 40), cv2.FONT_HERSHEY_SIMPLEX, 1, (0, 0, 255), 2)\n",
+    "                \n",
+    "            if label == 'Right':\n",
+    "                thumb_tip = hand_landmarks.landmark[mp_hands.HandLandmark.THUMB_TIP]\n",
+    "                index_finger_tip = hand_landmarks.landmark[mp_hands.HandLandmark.INDEX_FINGER_TIP]\n",
+    "                \n",
+    "                thumb_x = thumb_tip.x * img_w\n",
+    "                thumb_y = thumb_tip.y * img_h\n",
+    "                idx_finger_x = index_finger_tip.x * img_w\n",
+    "                idx_finger_y = index_finger_tip.y * img_h\n",
+    "                \n",
+    "                point1 = np.array([thumb_x, thumb_y])\n",
+    "                point2 = np.array([idx_finger_x, idx_finger_y])\n",
+    "                \n",
+    "                distance = np.linalg.norm(point1 - point2) # 두 점 사이의 직선 거리 계산\n",
+    "                \n",
+    "                cv2.putText(frame, str(int(distance)), (300, 100), cv2.FONT_HERSHEY_SIMPLEX, 1, (0, 0, 255), 2)\n",
+    "                \n",
+    "    cv2.imshow('Hand Tracking', frame)\n",
+    "    \n",
+    "    if cv2.waitKey(1) & 0xFF == 27:\n",
+    "        break\n",
+    "cap.release()\n",
+    "cv2.destroyAllWindows()\n",
+    "cv2.waitKey(1)\n",
+    "# cv2.destroyWindow('Hand Tracking')"
    ]
   }
  ],
