현재 변경사항 커밋

--- a/LLM/08_multi-modal/02_style_transfer/04_mediapipe_hands.ipynb
+++ b/LLM/08_multi-modal/02_style_transfer/04_mediapipe_hands.ipynb
@@ -206,6 +206,66 @@
     "cv2.waitKey(1)\n",
     "# cv2.destroyWindow('Hand Tracking')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. 손가락 관절 각도 계산"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_angle(a, b, c):\n",
+    "    a = np.array(a)\n",
+    "    b = np.array(b)\n",
+    "    c = np.array(c)\n",
+    "\n",
+    "    ba = a - b\n",
+    "    bc = c - b\n",
+    "\n",
+    "    consangle = np.dot(ba, bc) / (np.linalg.norm(ba) * np.linalg.norm(bc))\n",
+    "    arccos = np.arccos(consangle)\n",
+    "    return np.degrees(arccos)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "cap = cv2.VideoCapture(0)\n",
+    "\n",
+    "while cap.isOpened():\n",
+    "    ret, frame = cap.read()\n",
+    "    \n",
+    "    frame = cv2.flip(frame, 1)\n",
+    "    img_rgb = cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)\n",
+    "    \n",
+    "    results = hands.process(img_rgb)\n",
+    "    \n",
+    "    if results.multi_hand_landmarks:\n",
+    "        for hand_landmarks, hand_lr in zip(results.multi_hand_landmarks, results.multi_handedness):\n",
+    "                \n",
+    "            if1 = hand_landmarks.landmark[mp_hands.HandLandmark.INDEX_FINGER_MCP]\n",
+    "            if2 = hand_landmarks.landmark[mp_hands.HandLandmark.INDEX_FINGER_PIP]\n",
+    "            if3 = hand_landmarks.landmark[mp_hands.HandLandmark.INDEX_FINGER_DIP]\n",
+    "\n",
+    "    cv2.imshow('Hand Tracking', frame)\n",
+    "    \n",
+    "    if cv2.waitKey(1) & 0xFF == 27:\n",
+    "        break\n",
+    "cap.release()\n",
+    "cv2.destroyAllWindows()\n",
+    "cv2.waitKey(1)\n",
+    "# cv2.destroyWindow('Hand Tracking')"
+   ]
   }
  ],
  "metadata": {
