--- a/LLM/08_multi-modal/02_style_transfer/04_mediapipe_hands.ipynb
+++ b/LLM/08_multi-modal/02_style_transfer/04_mediapipe_hands.ipynb
@@ -257,6 +257,13 @@
     "            if2 = hand_landmarks.landmark[mp_hands.HandLandmark.INDEX_FINGER_PIP]\n",
     "            if3 = hand_landmarks.landmark[mp_hands.HandLandmark.INDEX_FINGER_DIP]\n",
     "\n",
+    "\n",
+    "            if1_list = [if1.x, if1.y, if1.z]\n",
+    "            if2_list = [if2.x, if2.y, if2.z]\n",
+    "            if3_list = [if3.x, if3.y, if3.z]\n",
+    "            index_finger_degree = calculate_angle(if1_list, if2_list, if3_list)\n",
+    "\n",
+    "            \n",
     "    cv2.imshow('Hand Tracking', frame)\n",
     "    \n",
     "    if cv2.waitKey(1) & 0xFF == 27:\n",
